--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="index.js"></script>
+    <header>
+        <nav>
+            <div class="box">
+                <h1>George Nyanjui</h1>
+                <ul>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Play ground</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section id="info">
+        <div class="box">
+            <h2>Hello! I'm George Nyanjui</h2>
+            <p>As a Seasoned Developer, I'm passionate about solving problems.</p>
+        </div>
+    </section>
+    <section id="content">
+        <div class="box">
+            <h2>Portfolio</h2>
+            <!-- add section projects -->
+            <div class="view">
+                <img src="" alt="">
+                <h3>Project</h3>
+                <p>Just a simple webiste</p>
+            </div>
+            <!-- add more projects here -->
+        </div>
+    </section>
+    <section id="contact">
+        <div class="box">
+            <p>Available for full time/contract design opportunities.</p>
+            <ul>
+                <li><a href="https://github.com/ohthebrave">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/george-nyanjui-6021a119b/">LinkedIn</a></li>
+                <li><a href="https://twitter.com/ohthebrave28">Twitter</a></li>
+                <li><a href="http://">Instagram</a></li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <div class="box">
+            <p>&copy; 2023 George Nyanjui</p>
+        </div>
+    </footer>
+    <script src="./index.js"></script>
 </body>
 </html>
